[package]
name = "caco3-web"
version = "0.4.0"
edition = "2021"
publish = true
description = "CaCO3 Web"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nui/caco3"
authors = ["Narongwet Mongkonsatcha <narongwet.m@gmail.com>"]
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
axum = "0.7"
byte-unit = { version = "5", default-features = false, features = ["byte", "serde"] }
bytemuck = { version = "1.14", features = ["derive"] }
figment = "0.10"
futures-core = "0.3"
http = "1"
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
time = { version = "0.3", features = ["macros", "serde", "serde-well-known"] }
tower = "0.4"
tracing = "0.1"

[dev-dependencies]
indoc = "2"
